# resume-ats-plugin

./:  web_api.py  README.md  architecture.md  cli_advanced.py  create.sh  edit.sh  fakepath_ats_report.json  job.txt  main.py  output.json  pyproject.toml  report.json  requirements.txt
.github/workflows/: publish.yml
Docker/: Dockerfile  Makefile  Readme.md  docker-compose.yml  nginx.conf
config/: skills_database.json
examples/: example_usage.py
src/resume_ats/: __init__.py  core.py  enhanced.py  pdf_reporter.py  resume_anonymizer.py  resume_version_tracker.py  utils.py  utils.py.fix
tests/: conftest.py  test_main.py  test_parser.py  test_resume_ats.py  test_scoring.py
